# advent-of-code

year2020/: Cargo.toml
year2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.pest  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs
year2020/src/pest/: day02.pest  day04.pest  day06.pest  day19.pest  day20.pest  day21.pest  day22.pest  day24.pest
year2021/: Cargo.toml
year2021/src/: day01.rs  day02.rs  day03.rs  lib.rs
year2022/: Cargo.toml  JUSTFILE  Readme.md
year2022/puzzle/: day01.md  day02.md  day03.md  day04.md  day05.md  day07.md  day08.md  day09.md  day10.md  day11.md
year2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs
year2022/src/pegs/: day05.pest  day07.pest  day10.pest  day11.pest
year2023/: Cargo.toml  JUSTFILE  README.md
year2023/puzzle/: day01.md  day02.md  day03.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md
year2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  lib.rs  main.rs
