[package]
name = "year2020"
version = "0.1.0"
authors = ["Will Dixon <dixonwille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
nom = "6.0"
pathfinding = "2.1"
bit = "0.1.1"
once_cell = "1.5.2"
