[package]
name = "year2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
pathfinding = "4.4.0"
pest = "2.7.5"
pest_consume = "1.1.3"

